add updateWrapperStation for ec and operator, updated open-api
